--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "winston": "^3.13.0",
+    "winston-mongodb": "^5.1.1"
   }
 }
