--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5000
-DB_URL = "mongodb://0.0.0.0:2701/"
+DB_URL = "mongodb://0.0.0.0:27017/"
 DB_NAME = "Movies-DB"
+REDIS_HOST = 127.0.0.1
+REDIS_PORT = 6379
