--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.2",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
+    "redis": "^4.7.0",
     "winston": "^3.13.0",
     "winston-mongodb": "^5.1.1"
   }
